# This configuration file is using an unstable feature of Poetry
# discussed here https://github.com/python-poetry/poetry/issues/2740
[tool.poetry]
name = "pyclp"
version = "1.1"
description = "Python library to interface ECLiPSe Constraint Programmig System."
authors = ["Oreste Bernardi"]
license = "BSD-2-Clause"
readme = "README.txt"
repository = "https://github.com/pellico/pyclp"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.group.dev.dependencies]
cython = "^0.29.34"

[build-system]
requires = ["poetry-core>=1.0.0", "cython>=0.29.34", "setuptools"]
build-backend = "poetry.core.masonry.api"

